tests/baselines/reference/checkIndexConstraintOfJavascriptClassExpression.errors.txt
tests/cases/compiler/weird.js(1,1): error TS2304: Cannot find name 'someFunction'.
tests/cases/compiler/weird.js(1,23): error TS7006: Parameter 'BaseClass' implicitly has an 'any' type.
tests/cases/compiler/weird.js(9,17): error TS7006: Parameter 'error' implicitly has an 'any' type.


==== tests/cases/compiler/weird.js (3 errors) ====
    someFunction(function(BaseClass) {
    ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'someFunction'.
                          ~~~~~~~~~
!!! error TS7006: Parameter 'BaseClass' implicitly has an 'any' type.
        'use strict';
        const DEFAULT_MESSAGE = "nop!";
        class Hello extends BaseClass {
            constructor() {
                super();
                this.foo = "bar";
            }
            _render(error) {
                    ~~~~~
!!! error TS7006: Parameter 'error' implicitly has an 'any' type.
                const message = error.message || DEFAULT_MESSAGE;
            }
        }
    });
    